type-only - added media queries to position.css to make corrections on smaller screens (still need to fix the breaking between <th> elements and their psuedo-elements. The form inputs are still having visual issues on small screens as well

--- a/type_only/styles/position.css
+++ b/type_only/styles/position.css
@@ -29,3 +29,17 @@ section {
 #tableArea th {
 	min-width:max-content;
 }
+
+
+/* Smaller screen adjustments */
+@media (max-width: 650px) {
+	
+	#informationArea {
+		margin-right: 5vw;
+		width: 85vw;
+	}
+	
+	th {
+		font-size: small;
+	}
+}
